{{$NEXT}}

    - PDF::API2->open($filename) no longer reads the entire file into memory
      before working on it, instead reading from the file as needed.  This
      results in a substantial reduction in memory usage and start-up time for
      large PDF files, particularly in cases where the calling script doesn't
      need to access all of the contents of the PDF.


2.038     2020-08-31

    - Use PDF::API2::XS or Image::PNG::Libpng, if either is installed, to speed
      up inclusion of PNG files with an alpha channel by an order of magnitude
      (written by Rob Scovell, sponsored by prayerletters.com).


2.037     2020-02-05

    - Allow PDF 2.0 files to be opened.

    - [RT #131147] Ignore dictionary entries with null values (reported by Klaus
      Ethgen, fix by Vadim Repin).


2.036     2019-09-17

    - Eliminate another uninitialized value warning in BaseFont.pm.


2.035     2019-08-09

    - The bounding box methods (mediabox, cropbox, bleedbox, trimbox, and
      artbox) now return their values when called without arguments.

    - The get_[media|crop|bleed|trim|art]box page methods have been deprecated
      since they're now redundant, but they continue to work.

    - [RT #130074] Remove unneeded (and newly-broken) calls to is_utf8 in
      Annotation.pm and NamedDestination.pm (reported by Mathieu Arnold).

    - Eliminate some uninitialized value warnings in BaseFont.pm.


2.034    2019-06-29

    - SUPPORTED PERL VERSIONS: Starting with this release, PDF::API2 will
      support major Perl versions released in the past six years, plus the major
      release before that one.  This should provide backward compatibility for
      the life of most LTS server distributions, while eliminating the need to
      troubleshoot warnings and bugs that only show up in increasingly-ancient
      versions of Perl.

      For this release, it means that the minimum supported Perl is 5.18, which
      was first released on 2013-05-18.
